# learning

./: .gitignore  README.md
_scripts/: end.sh  new.sh
amber/lang/snake/: README.md  main.ab
arduino/: .gitignore
arduino/book/: README.md
arduino/book/02_spaceship_interface/: README.md
arduino/book/03_love_o_meter/: README.md
arduino/book/04_color_mixing_lamp/: README.md
arduino/book/05_mood_cue/: README.md
arduino/book/06_light_theremin/: README.md
arduino/book/07_keyboard_instrument/: README.md
c/lang/: .gitignore
c/lang/hello-blank/: Makefile  README.md  main.c
c/lang/rock-paper-scissors/: Makefile  README.md
c/lang/todo-list/: Makefile  README.md
c/opengl/tetrahedron/: Makefile  README.md
c/raylib/2d-camera/: Makefile  README.md
c/rock-paper-scissors/: main.c
c/todo-list/: Makefile
c/todo-list/include/: task.h  todo.h
c/todo-list/src/: main.c  task.c
cpp/: .gitignore
cpp/opengl/learnopengl/: Makefile
go/lang/cat-api/: README.md  main.go
powershell/lang/wordle/: .gitignore  Main.ps1  README.md  Wordle.ps1
python/: .gitignore
python/pickle/hangman/: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
python/pickle/hangman/modules/: args.py  game.py  sqlite.py  utils.py
python/pickle/hangman/src/: game.py  main.py  sqlite.py
python/std/collections/: README.md  main.py
python/std/pickle/hangman/: README.md  hangman.py  pyproject.toml
python/std/pickle/hangman/modules/: args.py  utils.py
rust/: .gitignore
rust/anyhow/basics/: Cargo.toml  README.md
rust/ratatui/table/: Cargo.toml  README.md
(+158 files in other folders)
