[project]
name = "hangman"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pre-commit>=4.2.0",
    "requests>=2.32.3",
    "ruff>=0.11.11",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
extend-select = ["C", "E", "F", "N", "T", "W"]
exclude = [
    ".venv",
    "__init__.py",
]
select = ["C", "E", "F", "N", "T", "W"]
ignore = ["T201"]
